fix: verify native module build in docker
- Add explicit `npm rebuild better-sqlite3 --build-from-source` to `ui/Dockerfile.test`.
- Add a shell check to verify `better_sqlite3.node` exists after build.
- This ensures the build process actually produces the binary and fails the build immediately if it does not, aiding debugging.

--- a/ui/Dockerfile.test
+++ b/ui/Dockerfile.test
@@ -17,6 +17,10 @@ COPY ui/package.json ./
 
 # Install dependencies
 RUN npm install --unsafe-perm --build-from-source=better-sqlite3
+# Explicitly rebuild to ensure binary is generated
+RUN npm rebuild better-sqlite3 --build-from-source
+# Verify binary existence
+RUN [ -f node_modules/better-sqlite3/build/Release/better_sqlite3.node ] && echo "Binary exists" || (echo "Binary missing" && exit 1)
 RUN ln -s /app/node_modules /node_modules
 
 # Copy source code
