--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -112,7 +112,7 @@ jobs:
             -e DATABASE_URL=/app/data/sqlite.db \
             --entrypoint /bin/sh \
             jules-test:latest \
-            -c "npx tsx scripts/seed-e2e.ts"
+            -c "pnpm exec tsx scripts/seed-e2e.ts"
 
           # 2. Run Playwright Tests against network host (localhost:9002)
           docker run --rm \
@@ -125,7 +125,7 @@ jobs:
             -e MOCK_API=true \
             -e JULES_API_KEY=mock-api-key \
             jules-test:latest \
-            npm run test:e2e
+            pnpm run test:e2e
 
       - uses: actions/upload-artifact@v4
         if: always()
