--- a/ui/Dockerfile.test
+++ b/ui/Dockerfile.test
@@ -18,11 +18,8 @@ ENV NODE_OPTIONS="--max-old-space-size=4096"
 # Copy package files
 COPY ui/package.json ui/pnpm-lock.yaml ./
 
-# Install dependencies
-RUN pnpm install --frozen-lockfile
-
-# Force rebuild better-sqlite3 to ensure bindings match the container environment
-RUN pnpm rebuild better-sqlite3
+# Install dependencies (force build from source for better-sqlite3 to ensure compatibility)
+RUN pnpm install --frozen-lockfile --config.build-from-source=better-sqlite3
 
 # Copy source code
 COPY ui/ .
