--- a/ui/Dockerfile.test
+++ b/ui/Dockerfile.test
@@ -7,22 +7,19 @@ RUN apt-get update && apt-get install -y wget build-essential python3 g++ make &
     rm go1.24.0.linux-amd64.tar.gz
 ENV PATH="/usr/local/go/bin:${PATH}"
 
-# Install pnpm
-RUN npm install -g pnpm@10
-
 WORKDIR /app
 
 ENV CI=true
 ENV NODE_OPTIONS="--max-old-space-size=4096"
 
-# Copy package files
-COPY ui/package.json ui/pnpm-lock.yaml ./
+# Copy package files (use npm to avoid pnpm/node-gyp/symlink complexity in this test container)
+COPY ui/package.json ./
 
-# Use hoisted linker to avoid symlink issues with better-sqlite3 bindings
-RUN echo "node-linker=hoisted" > .npmrc
+# Install dependencies
+RUN npm install
 
-# Install dependencies (force build from source for better-sqlite3 to ensure compatibility)
-RUN pnpm install --frozen-lockfile --config.build-from-source=better-sqlite3
+# Rebuild better-sqlite3
+RUN npm rebuild better-sqlite3 --build-from-source
 
 # Copy source code
 COPY ui/ .
@@ -38,4 +35,4 @@ COPY server/ /server/
 RUN cd /server && go mod download && CGO_ENABLED=1 go build -o /app/server_bin cmd/server/main.go
 
 # Run E2E tests
-CMD ["pnpm", "run", "test:e2e"]
+CMD ["npm", "run", "test:e2e"]
